Bug 1663030: include unistd.h in MozCpu-vixl.cpp on Android too; r=lth

This includes the declaration of the syscall(2) function.

Differential Revision: https://phabricator.services.mozilla.com/D89366